--- a/.gitignore
+++ b/.gitignore
@@ -159,6 +159,9 @@ venv.bak/
 .dmypy.json
 dmypy.json
 
+## ayush did these things
+artifacts/*
+
 # Pyre type checker
 .pyre/
 
@@ -205,3 +208,5 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+
